--- a/index.html
+++ b/index.html
@@ -51,125 +51,131 @@
 
       <!-- Преимущества -->
       <section class="section">
-        <h2 class="section-title">
-          Snap photos and share like <br />
-          never before
-        </h2>
+        <div class="container">
+          <h2 class="section-title">
+            Snap photos and share like <br />
+            never before
+          </h2>
 
-        <ul class="feature-list list">
-          <li>
-            <h3 class="title">Sed ut perspiciatis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Lorem ipsum dolor</h3>
-            <p>
-              Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Nemo enim ipsam</h3>
-            <p>
-              Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-              quia non numquam.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Tempor incididunt</h3>
-            <p>
-              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-              quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-              tempora.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-        </ul>
+          <ul class="feature-list list">
+            <li>
+              <h3 class="title">Sed ut perspiciatis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Lorem ipsum dolor</h3>
+              <p>
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Nemo enim ipsam</h3>
+              <p>
+                Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+                sed quia non numquam.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Tempor incididunt</h3>
+              <p>
+                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+                ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
+                modi tempora.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Примеры работ -->
-      <section class="section">
-        <h2 class="section-title">Example of work</h2>
-        <ul class="work-list list">
-          <li>
-            <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem.
-            </p>
-          </li>
-          <li>
-            <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem.
-            </p>
-          </li>
-        </ul>
+      <section class="section no-padding">
+        <div class="container">
+          <h2 class="section-title">Example of work</h2>
+          <ul class="work-list list">
+            <li class="item">
+              <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem.
+              </p>
+            </li>
+            <li class="item">
+              <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Клиенты -->
       <section class="section">
-        <h2 class="section-title">You’re in good company</h2>
-        <p class="section-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore
-        </p>
-        <ul class="list">
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/icon.svg" alt="Логотип компании" />
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title centered">You’re in good company</h2>
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore
+          </p>
+          <ul class="list">
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/icon.svg" alt="Логотип компании" />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Регистрация -->
